Styling the current HTML in CSS

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 		<div class="timer">Time: <span id="time">0</span></div> -->
 
 		<!-- Start quiz button -->
-		<button id="start_btn">Start Quiz</button>
+		<div class="start_btn"><button>Start Quiz</button></div>
 
         <!-- Info box -->
         <div class="info_box">
 
             <div class="info_title">
-                <span>Rules of the quiz</span>
+                <span>Rules of the Quiz</span>
             </div>
 
             <div class="info_list">
                 <div class="info">1. You will have only <span>15 seconds</span> per question</div>
                 <div class="info">2. Once you select your answer, you can't reselect</div>
                 <div class="info">3. You can'tt select any answers after the time has ran out.</div>
-                <div class="info">You can't exit from the Quiz once it begins.</div>
-                <div class="info">You'll get points on the basis of your correct answers</div>
+                <div class="info">4. You can't exit from the Quiz once it begins.</div>
+                <div class="info">5. You'll get points on the basis of your correct answers</div>
             </div>
 
             <div class="buttons">
@@ -45,6 +45,8 @@
                 <button class="restart">Continue</button>
             </div>
         </div>
+
+        
 
 		<script src="./assets/js/questions.js"></script>
 		<script src="./assets/js/logic.js"></script>
