Styling the next part of HTML which includes footer items and questions

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 				<div class="option_list">
 					<div class="option">
 						<span>alertBox('Hello, world!');</span>
-						<div class="icon check"><i class="fas fa-check"></i></div>
+						<div class="icon tick"><i class="fas fa-check"></i></div>
 					</div>
 					<div class="option">
 						<span>alert('Hello, world!');</span>
-						<div class="icon cross"><i class="fas fa-cross"></i></div>
+						<div class="icon cross"><i class="fas fa-xmark"></i></div>
 					</div>
 					<div class="option">
 						<span>msg('Hello, world!');</span>
