--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
             </footer>
 		</div>
 
+        <!-- Result box -->
+        <div class="result_box">
+            <div class="icon">
+                <i class="fas fa-crown"></i>
+            </div>
+            <div class="complete_text">You'vecompleted the Quiz!</div>
+            <div class="score_text">
+                <span>Sorry, You only scored <p>2</p> out of <p>5</p></span>
+            </div>
+            <div class="buttons">
+                <button class="restart">Reply Quiz</button>
+                <button class="quit">Quit Quiz</button>
+            </div>
+        </div>
+
 		<script src="./assets/js/questions.js"></script>
 		<script src="./assets/js/logic.js"></script>
 	</body>
