Styling the results box in CSS

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					2. Once you select your answer, you can't reselect
 				</div>
 				<div class="info">
-					3. You can'tt select any answers after the time has ran out.
+					3. You can't select any answers after the time has ran out.
 				</div>
 				<div class="info">4. You can't exit from the Quiz once it begins.</div>
 				<div class="info">
@@ -98,13 +98,13 @@
             <div class="icon">
                 <i class="fas fa-crown"></i>
             </div>
-            <div class="complete_text">You'vecompleted the Quiz!</div>
+            <div class="complete_text">You've completed the Quiz!</div>
             <div class="score_text">
-                <span>Sorry, You only scored <p>2</p> out of <p>5</p></span>
+                <span>Sorry, You only scored <p> 2</p>out of <p> 5</p></span>
             </div>
             <div class="buttons">
-                <button class="restart">Reply Quiz</button>
-                <button class="quit">Quit Quiz</button>
+                <button class="restart">Restart Quiz</button>
+                <button class="quit">Exit Quiz</button>
             </div>
         </div>
 
