Setting up all required elements in JavaScript logic file

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 					<div class="time_text">Time Remaining</div>
 					<div class="timer_sec">15</div>
 				</div>
+                <div class="time_line"></div>
 			</header>
 			<section>
 				<div class="question_text">
