Displaying questions and options from the questions array in questions.js

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
 			</header>
 			<section>
 				<div class="question_text">
-					<span>How do you write 'Hello, World!' in an alert box?</span>
+					<!-- <span>How do you write 'Hello, World!' in an alert box?</span> -->
 				</div>
+                
 				<div class="option_list">
-					<div class="option">
+					<!-- <div class="option">
 						<span>alertBox('Hello, world!');</span>
 						<div class="icon tick"><i class="fas fa-check"></i></div>
 					</div>
@@ -81,7 +82,7 @@
 					</div>
 					<div class="option">
 						<span>msgBox('Hello, world!');</span>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
