--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="question_text">
 					<!-- <span>How do you write 'Hello, World!' in an alert box?</span> -->
 				</div>
-                
+
 				<div class="option_list">
 					<!-- <div class="option">
 						<span>alertBox('Hello, world!');</span>
@@ -89,7 +89,7 @@
 			<!-- Quiz box footer -->
             <footer>
                 <div class="total_questions">
-                    <span><p>2</p>of<p>5</p>Questions</span>
+                    <!-- <span><p>2</p>of<p>5</p>Questions</span> -->
                 </div>
                 <button class="next_btn">Next Question</button>
             </footer>
