Adding a countdown timer, which pauses on selecting an answer, with a time bar that fills as the tiime counts down.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 					<div class="time_text">Time Remaining</div>
 					<div class="timer_sec">15</div>
 				</div>
-                <div class="time_line"></div>
+				<div class="time_line"></div>
 			</header>
+
 			<section>
 				<div class="question_text">
 					<!-- <span>How do you write 'Hello, World!' in an alert box?</span> -->
@@ -87,28 +88,33 @@
 			</section>
 
 			<!-- Quiz box footer -->
-            <footer>
-                <div class="total_questions">
-                    <!-- <span><p>2</p>of<p>5</p>Questions</span> -->
-                </div>
-                <button class="next_btn">Next Question</button>
-            </footer>
+			<footer>
+				<div class="total_questions">
+					<!-- <span><p>2</p>of<p>5</p>Questions</span> -->
+				</div>
+				<button class="next_btn">Next Question</button>
+			</footer>
 		</div>
 
-        <!-- Result box -->
-        <div class="result_box">
-            <div class="icon">
-                <i class="fas fa-crown"></i>
-            </div>
-            <div class="complete_text">You've completed the Quiz!</div>
-            <div class="score_text">
-                <span>Sorry, You only scored <p> 2</p>out of <p> 5</p></span>
-            </div>
-            <div class="buttons">
-                <button class="restart">Restart Quiz</button>
-                <button class="quit">Exit Quiz</button>
-            </div>
-        </div>
+		<!-- Result box -->
+		<div class="result_box">
+			<div class="icon">
+				<i class="fas fa-crown"></i>
+			</div>
+			<div class="complete_text">You've completed the Quiz!</div>
+			<div class="score_text">
+				<span
+					>Sorry, You only scored
+					<p>2</p>
+					out of
+					<p>5</p></span
+				>
+			</div>
+			<div class="buttons">
+				<button class="restart">Restart Quiz</button>
+				<button class="quit">Exit Quiz</button>
+			</div>
+		</div>
 
 		<script src="./assets/js/questions.js"></script>
 		<script src="./assets/js/logic.js"></script>
