--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 			</div>
 			<div class="complete_text">You've completed the Quiz!</div>
 			<div class="score_text">
-				<span
+				<!-- <span
 					>Sorry, You only scored
 					<p>2</p>
 					out of
 					<p>5</p></span
-				>
+				> -->
 			</div>
 			<div class="buttons">
 				<button class="restart">Restart Quiz</button>
