Adding save scores using LocalStorage and displaying them, currently unstyled, in highscoresHTML

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
 	</head>
 
 	<body>
-		<!-- <div class="scores"><a href="highscores.html">View High Scores</a></div>
-
-		<div class="timer">Time: <span id="time">0</span></div> -->
-
 		<!-- Start quiz button -->
 		<div class="start_btn"><button>Start Quiz</button></div>
 
@@ -66,31 +62,18 @@
 
 			<section>
 				<div class="question_text">
-					<!-- <span>How do you write 'Hello, World!' in an alert box?</span> -->
+
 				</div>
 
 				<div class="option_list">
-					<!-- <div class="option">
-						<span>alertBox('Hello, world!');</span>
-						<div class="icon tick"><i class="fas fa-check"></i></div>
-					</div>
-					<div class="option">
-						<span>alert('Hello, world!');</span>
-						<div class="icon cross"><i class="fas fa-xmark"></i></div>
-					</div>
-					<div class="option">
-						<span>msg('Hello, world!');</span>
-					</div>
-					<div class="option">
-						<span>msgBox('Hello, world!');</span>
-					</div> -->
+
 				</div>
 			</section>
 
 			<!-- Quiz box footer -->
 			<footer>
 				<div class="total_questions">
-					<!-- <span><p>2</p>of<p>5</p>Questions</span> -->
+
 				</div>
 				<button class="next_btn">Next Question</button>
 			</footer>
@@ -103,16 +86,13 @@
 			</div>
 			<div class="complete_text">You've completed the Quiz!</div>
 			<div class="score_text">
-				<!-- <span
-					>Sorry, You only scored
-					<p>2</p>
-					out of
-					<p>5</p></span
-				> -->
+
 			</div>
 			<div class="buttons">
+                <button class="scores">High Scores</button>
+                <button class="quit">Exit Quiz</button>
 				<button class="restart">Restart Quiz</button>
-				<button class="quit">Exit Quiz</button>
+
 			</div>
 		</div>
 
