--- a/highscores.html
+++ b/highscores.html
@@ -14,10 +14,13 @@
       <h1>High Scores</h1>
       <ol id="highscores"></ol>
 
-      <a href="index.html"><button>Go Back</button></a>
-      <button id="clear">Clear High Scores</button>
+      <div class="buttons">
+				<button class="back">Go Back</button>
+				<button class="clear">Clear High Scores</button>
+			</div>
     </div>
 
     <script src="./assets/js/scores.js"></script>
+    <script src="./assets/js/logic.js"></script>
   </body>
 </html>
