--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			<div class="info_list">
 				<div class="info">
-					1. You will have only <span>15 seconds</span> per question
+					1. You will have <span>60 seconds</span> to answer as many questions as possible
 				</div>
 				<div class="info">
 					2. Once you select your answer, you can't reselect
@@ -55,7 +55,7 @@
 				<div class="title">Timed JavaScript Quiz</div>
 				<div class="timer">
 					<div class="time_text">Time Remaining</div>
-					<div class="timer_sec">15</div>
+					<div class="timer_sec">--</div>
 				</div>
 				<div class="time_line"></div>
 			</header>
