Updating start game information to user

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					1. You will have <span>60 seconds</span> to answer as many questions as possible
 				</div>
 				<div class="info">
-					2. Once you select your answer, you can't reselect
+					2. You will be deducted <span>10 seconds</span> seconds for an incorrect answer
 				</div>
 				<div class="info">
-					3. You can't select any answers after the time has ran out.
+					3. Once you select your answer, you can't reselect
 				</div>
 				<div class="info">4. You can't exit from the Quiz once it begins.</div>
 				<div class="info">
