--- a/highscores.html
+++ b/highscores.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>High Scores</title>
-
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
-    <div class="wrapper">
-      <h1>High Scores</h1>
-      <ol id="highscores"></ol>
+  <!-- High scores box -->
+    <div class="scores_box">
+      <header>
+        <h1>High Scores</h1>
+        <ol id="highscores"></ol>
+			</header>
 
       <div class="buttons">
 				<button class="back">Go Back</button>
-				<button class="clear">Clear High Scores</button>
+				<button class="clear">Clear Scores</button>
 			</div>
     </div>
 
