--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					1. You will have <span>60 seconds</span> to answer as many questions as possible
 				</div>
 				<div class="info">
-					2. You will be deducted <span>10 seconds</span> seconds for an incorrect answer
+					2. You will be deducted <span>10 seconds</span> for an incorrect answer
 				</div>
 				<div class="info">
 					3. Once you select your answer, you can't reselect
